--- a/Copernicus.Models.Tests/packages.config
+++ b/Copernicus.Models.Tests/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CraigsUtilityLibrary" version="4.0.216-beta" targetFramework="net45" />
+  <package id="CraigsUtilityLibrary" version="4.0.230-beta" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.1.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
-  <package id="Microsoft.CodeAnalysis.Common" version="1.0.0-beta1-20141031-01" targetFramework="net45" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0-beta1-20141031-01" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.CodeAnalysis.Common" version="1.0.0.0-beta2" targetFramework="net45" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.0" targetFramework="net45" />
@@ -17,5 +17,10 @@
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.32-beta" targetFramework="net45" />
   <package id="System.Reflection.Metadata" version="1.0.17-beta" targetFramework="net45" />
-  <package id="xunit" version="1.9.2" targetFramework="net45" />
+  <package id="xunit" version="2.0.0-rc1-build2826" targetFramework="net45" />
+  <package id="xunit.abstractions" version="2.0.0-rc1-build2826" targetFramework="net45" />
+  <package id="xunit.assert" version="2.0.0-rc1-build2826" targetFramework="net45" />
+  <package id="xunit.core" version="2.0.0-rc1-build2826" targetFramework="net45" />
+  <package id="xunit.extensibility.core" version="2.0.0-rc1-build2826" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="2.0.0-rc1-build1030" targetFramework="net45" />
 </packages>
