--- a/Copernicus.Core.Tests/app.config
+++ b/Copernicus.Core.Tests/app.config
@@ -63,6 +63,10 @@
                 <assemblyIdentity name="System.Collections.Immutable" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-1.1.20.0" newVersion="1.1.20.0" />
             </dependentAssembly>
+            <dependentAssembly>
+              <assemblyIdentity name="Microsoft.VisualStudio.TestPlatform.ObjectModel" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+              <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+            </dependentAssembly>
         </assemblyBinding>
     </runtime>
 </configuration>
